package com.designing.splitwise.model.split;

import com.designing.splitwise.model.User;

public class EqualSplit extends Split {

    public EqualSplit(User user) {
        super(user);
    }
}